--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react-dom": "^17.0.2",
     "sass": "^1.49.8",
     "uuid": "^8.3.2"
+  },
+  "dependencies": {
+    "react-redux": "^7.2.6"
   }
 }
